--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "ogv": "1.8.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-scripts": "4.0.0"
+    "react-scripts": "4.0.0",
+    "serve-handler": "^6.1.3"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
